# NHA-4-163

./: .env.example  .gitignore  .gitleaks.toml  LICENSE  Makefile  PROJECT_COMPONENT_USAGE.md  PROJECT_DOCUMENTATION.md  PROJECT_IDEA_AND_IMPLEMENTATION.md  README.md  feature_recommendations.md  implementation_plan.md  implementation_plan_tier 3.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  docker-build.yml
Healthcare/: pyvenv.cfg
Healthcare/Scripts/: activate  activate.bat
docs/: streamlit-navigation-guide.md
infra/compose/: docker-compose.yml
infra/docker/: airflow-requirements.txt  airflow.Dockerfile  mlflow.Dockerfile  streamlit.Dockerfile
infra/k8s/ingress/: ingress.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
libs/common/: config.py  deidentification.py  encryption.py  logging.py  phi.py  quality.py
libs/common/models/: __init__.py  audit_log.py  base.py  cascade.py  condition.py  consent.py  encounter.py  family_member_history.py  genetic_test.py  medication_request.py  notification.py  observation.py  organization.py  patient.py  physician.py  prediction_log.py
ml/artifacts/: pedigree_gnn.pt
ml/features/: registry.py  schema.py
ml/models/: calibration.py  gnn_link_prediction.py  gnn_model.py  pedigree_graph.py  xgboost_model.py
ml/monitoring/: drift_detector.py  model_monitor.py
ml/serving/: bentoml_service.py
ml/training/: dataset.py  evaluate.py  fairness.py  train_gnn.py  train_link_prediction.py  train_xgboost.py
pipelines/airflow/dags/: batch_ingestion_dag.py  feature_engineering_dag.py  model_monitoring_dag.py  model_training_dag.py
pipelines/spark/feature_engineering/: job.py
pipelines/spark/feature_engineering/features/: comorbidities.py  demographics.py  graph_features.py  medication_adherence.py
pipelines/spark/streaming/: job.py  validators.py
pipelines/spark/streaming/transforms/: identity_resolution.py
pipelines/spark/streaming/writers/: delta_writer.py  neo4j_writer.py  postgres_writer.py
schemas/postgres/versions/: 0001_baseline.py  0002_physician.py  0003_patient.py  0004_encounter.py  0005_condition.py  0006_observation.py  0007_medication_request.py  0008_family_member_history.py  0009_audit_log.py  0010_rls_policies.py  0011_organization.py  0012_notification.py  0013_cascade.py  0014_genetics.py  0015_consent.py
scripts/: create_service_account.py
services/api/: db.py  deps.py  main.py
services/api/auth/: api_key.py  jwt.py  models.py  portal_auth.py  rbac.py
services/api/middleware/: audit.py  metrics.py  rate_limit.py
services/api/routers/: auth.py  batch_screening.py  cascade.py  conditions.py  consent.py  encounters.py  export.py  family.py  fhir.py  genetics.py  guidelines.py  health.py  import_data.py  inheritance.py  medications.py  monitoring.py  notifications.py  observations.py  organizations.py  patient_crud.py  patients.py  pedigree.py  portal.py  predictions.py  prs.py  reports.py  risk_history.py  whatif.py
services/api/schemas/: cascade_schemas.py  consent_schemas.py  crud_schemas.py  fhir_schemas.py  genetics_schemas.py  guideline_schemas.py  inheritance_schemas.py  monitoring_schemas.py  notification_schemas.py  org_schemas.py  pedigree_schemas.py  portal_schemas.py  prs_schemas.py  responses.py  whatif_schemas.py
services/api/services/: cache_service.py  cascade_service.py  consent_service.py  differential_service.py  feature_service.py  gnn_pedigree_service.py  guideline_service.py  inheritance_service.py  model_service.py  monitoring_service.py  notification_service.py  pdf_service.py  pedigree_service.py  portal_service.py  prs_service.py  variant_service.py  whatif_service.py
services/consumers/: __init__.py  risk_recompute_consumer.py
services/ingestion/: kafka_admin.py
services/streamlit/: app.py
services/streamlit/pages/: patient_management.py
services/streamlit/views/: audit_viewer.py  dashboard_metrics.py  decision_support_page.py  encounters_page.py  genetics_page.py  notifications_page.py  patient_management.py  population_health.py  portal_page.py  screening_page.py
tests/: conftest.py
tests/integration/: test_live_api.py  test_live_services.py
tests/unit/: test_api_schemas.py  test_cascade_service.py  test_consent_service.py  test_deidentified_export.py  test_differential_service.py  test_feature_engineering.py  test_feature_service_sql.py  test_fhir_schemas.py  test_genetics_services_coverage.py  test_gnn_link_prediction.py  test_guideline_service.py  test_identity_resolution.py  test_import_smoke.py  test_inheritance_service.py  test_logging.py  test_ml_models.py  test_ml_pipeline_coverage.py  test_models.py  test_monitoring.py  test_monitoring_service.py  test_notification_service.py  test_pdf_report.py  test_pedigree_graph.py  test_pedigree_service.py  test_phi.py  test_portal_service.py  test_prs_service.py  test_risk_recompute_consumer.py  test_routers_coverage.py  test_security.py  test_service_coverage.py  test_services_extra_coverage.py  test_stream_validators.py  test_variant_service.py  test_whatif_service.py
