[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata (monorepo root — not a publishable package itself)
# ---------------------------------------------------------------------------
[project]
name = "healthcare-hereditary"
version = "0.1.0"
description = "Healthcare Hereditary Disease Prediction System"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
dependencies = [
    "fastapi==0.110.3",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "redis==5.0.4",
    "psycopg2-binary==2.9.9",
    "neo4j==5.19.0",
    "mlflow==2.13.0",
    "prometheus-client==0.15.0",
    "xgboost==2.0.3",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.2",
    "streamlit==1.32.2",
    "plotly==5.18.0",
    "cryptography==42.0.5",
    "alembic==1.13.1",
    "confluent-kafka==2.3.0",
    "requests==2.31.0",
    "great-expectations==0.18.12",
    "scipy==1.12.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "services*", "ml*", "pipelines*"]
exclude = ["tests*"]

# ---------------------------------------------------------------------------
# Ruff — fast linter + formatter (replaces flake8, isort, pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "pipelines", "ml", "libs", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no bare print statements)
    "ANN", # flake8-annotations (type hints)
    "ERA", # eradicate (no commented-out code)
]
ignore = [
    "ANN101", # missing type annotation for self
    "ANN102", # missing type annotation for cls
    "S101",   # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN", "T20"]
"scripts/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["libs.common", "services", "pipelines", "ml"]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | Healthcare
  | build
  | dist
)/
'''

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["Healthcare/", "build/", "dist/"]

[[tool.mypy.overrides]]
module = ["pyspark.*", "graphframes.*", "neo4j.*", "mlflow.*", "feast.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--cov=libs",
    "--cov=services",
    "--cov=pipelines",
    "--cov=ml",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=85",
]
markers = [
    "unit: fast, no external deps",
    "integration: requires running services",
    "slow: long-running tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["libs", "services", "pipelines", "ml"]
omit = ["*/tests/*", "*/migrations/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
