[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Project metadata (monorepo root — not a publishable package itself)
# ---------------------------------------------------------------------------
[project]
name = "healthcare-hereditary"
version = "0.1.0"
description = "Healthcare Hereditary Disease Prediction System"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.110.3",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "redis==5.0.4",
    "psycopg2-binary==2.9.9",
    "neo4j==5.19.0",
    "mlflow==2.13.0",
    "prometheus-client==0.15.0",
    "xgboost==2.0.3",
    "numpy==1.26.4",
    "pandas==2.2.1",
    "scikit-learn==1.4.2",
    "streamlit==1.32.2",
    "plotly==5.18.0",
    "cryptography==42.0.5",
    "alembic==1.13.1",
    "confluent-kafka==2.3.0",
    "requests==2.31.0",
    "great-expectations==0.18.12",
    "scipy==1.12.0",
    "asyncpg==0.29.0",
    "python-multipart==0.0.9",
    "fpdf2==2.7.9",
    "PyJWT==2.8.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["libs*", "services*", "ml*", "pipelines*"]
exclude = ["tests*"]

# ---------------------------------------------------------------------------
# Ruff — fast linter + formatter (replaces flake8, isort, pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["services", "pipelines", "ml", "libs", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "T20", # flake8-print (no bare print statements)
    "ANN", # flake8-annotations (type hints)
    "ERA", # eradicate (no commented-out code)
]
ignore = [
    "S101", # use of assert (allowed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN", "T20"]
"scripts/**/*.py" = ["T20"]
# `random` here is used for non-cryptographic purposes only — UI demo/sample data,
# ML negative sampling, and non-security jitter — so S311 does not apply.
"services/streamlit/views/audit_viewer.py" = ["S311"]
"services/streamlit/views/screening_page.py" = ["S311", "ANN401"]
"services/api/routers/batch_screening.py" = ["S311"]
"ml/models/pedigree_graph.py" = ["S311"]
"ml/training/train_link_prediction.py" = ["S311"]
# `Any` in these modules is justified: they interface with dynamically-typed
# external objects — Spark sessions/DataFrames, psycopg cursors, MLflow model
# handles, pydantic Settings loaded lazily, and raw FHIR/JSON payloads — that
# carry no static type information. (CLAUDE.md permits Any with justification.)
"libs/common/quality.py" = ["ANN401"]
"ml/monitoring/drift_detector.py" = ["ANN401"]
"ml/training/dataset.py" = ["ANN401"]
"pipelines/airflow/dags/batch_ingestion_dag.py" = ["ANN401"]
"pipelines/spark/streaming/job.py" = ["ANN401"]
"pipelines/spark/streaming/writers/delta_writer.py" = ["ANN401"]
"pipelines/spark/streaming/writers/neo4j_writer.py" = ["ANN401"]
"pipelines/spark/streaming/writers/postgres_writer.py" = ["ANN401"]
"services/api/auth/jwt.py" = ["ANN401"]
"services/api/auth/portal_auth.py" = ["ANN401"]
"services/api/auth/rbac.py" = ["ANN401"]
"services/api/routers/fhir.py" = ["ANN401"]
"services/api/schemas/fhir_schemas.py" = ["ANN401"]
"services/api/services/portal_service.py" = ["ANN401"]
"services/consumers/risk_recompute_consumer.py" = ["ANN401"]
"services/streamlit/app.py" = ["ANN401"]
"services/streamlit/views/genetics_page.py" = ["ANN401"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses callables (Depends/Query/File/Body/Form) as argument defaults by
# design; these are safe and idiomatic, so exempt them from B008.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
    "fastapi.Security",
    "fastapi.UploadFile",
]

[tool.ruff.lint.isort]
known-first-party = ["libs.common", "services", "pipelines", "ml"]

# ---------------------------------------------------------------------------
# Black — code formatter
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | Healthcare
  | build
  | dist
)/
'''

# ---------------------------------------------------------------------------
# Mypy — static type checker
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
# Absolute imports are rooted at the repo (e.g. ``libs.common.x``); tell mypy the
# package base is the repo root so a file isn't discovered under two module names.
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
exclude = ["Healthcare/", "build/", "dist/", "\\.venv"]

[[tool.mypy.overrides]]
module = ["pyspark.*", "graphframes.*", "neo4j.*", "mlflow.*", "feast.*"]
ignore_missing_imports = true

# Airflow TaskFlow (@dag/@task), PySpark, and BentoML expose untyped decorators
# and dynamically-typed DataFrame/Row/Session APIs. Strict typing fights the
# frameworks here instead of catching real bugs, so relax only the
# framework-driven error codes in these modules (strict stays on everywhere else).
[[tool.mypy.overrides]]
module = [
    "pipelines.airflow.dags.*",
    "pipelines.spark.*",
    "ml.serving.bentoml_service",
]
disable_error_code = [
    "untyped-decorator",
    "arg-type",
    "type-arg",
    "no-any-return",
    "attr-defined",
]
warn_unused_ignores = false

# The ML numeric layer is numpy/pandas-heavy where fully-parameterised generics
# (e.g. ``np.ndarray[Any, np.dtype[np.float64]]``) add noise without catching
# bugs. Relax only ``type-arg`` here; every other strict check stays enabled.
[[tool.mypy.overrides]]
module = ["ml.models.*", "ml.training.*", "ml.monitoring.*"]
# numpy/torch reductions are typed as returning ``Any`` in their stubs, so
# ``no-any-return`` fires on correct code; relax it alongside ``type-arg`` here.
disable_error_code = ["type-arg", "no-any-return"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--cov=libs",
    "--cov=services",
    "--cov=pipelines",
    "--cov=ml",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    # Gate reflects unit-test coverage of unit-testable code. Integration-only
    # modules (Spark jobs, GPU training, and services making direct
    # psycopg2/Neo4j/passlib connections) are omitted here and covered by the
    # integration suite — see [tool.coverage.run] omit. The gate carries a margin
    # below the observed CI figure (~78%): the GNN/torch tests are skipped when
    # torch is not installed in CI, so they do not count toward CI coverage.
    "--cov-fail-under=75",
]
markers = [
    "unit: fast, no external deps",
    "integration: requires running services",
    "slow: long-running tests",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["libs", "services", "pipelines", "ml"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    # Integration-only entrypoints: these require a live Spark cluster, GPU/torch
    # training runtime, or an MLflow/BentoML server, so they are exercised by the
    # integration suite (tests/integration/) rather than by unit tests.
    "pipelines/spark/streaming/job.py",
    "pipelines/spark/streaming/writers/*.py",
    "pipelines/spark/feature_engineering/job.py",
    "pipelines/spark/feature_engineering/features/*.py",
    "ml/training/train_gnn.py",
    "ml/training/train_xgboost.py",
    "ml/serving/bentoml_service.py",
    # These make direct psycopg2 / Neo4j / passlib connections that bypass the
    # injectable async session, so they can only be exercised against live
    # services in the integration suite.
    "services/api/routers/auth.py",
    "services/api/routers/predictions.py",
    "services/api/routers/patients.py",
    "services/api/routers/pedigree.py",
    "services/api/services/feature_service.py",
    "services/api/services/gnn_pedigree_service.py",
    "ml/monitoring/model_monitor.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
